2003-02-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug in resizing tabs and window when closing 
      a session.
      

2003-02-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Manually firing screen update timer after a keyDown 
      to make user input more responsive.
      
    * Fixed memory leak by properly releasing BUFFER in 
      VT100Screen: -dealloc. Also no need to retain 
      BUFFER after alloc and init.
      
    * Fixed bug in accessing characters in buffer while 
      marking autowrap position.
      

2003-02-21	fabian
    * Fixed a bug in function key mapping: F1~F12
    * Fixed a bug in showCursor. Cleaned overall cursor
      Code.
    * Fixed bugs related to color/font settings in buffer
    * Fixed a bug affecting CJK input
    * Perfromace improvement. Now a buffer is used in
      displaying the text. Significantly improve the
      overall speed. Need more test.
      
2003-02-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added and implemented tabViewWillPerformDragOperation 
      tabViewDidPerformDragOperation delegate methods. This 
      gets rid of a visual glitch when doing drag-n-drop 
      within a window with only two tabs.
      

2003-02-19	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support for a few xterm character attributes.
    
    * Tabs are dragged only after about 8 pixels to prevent 
      accidental dragging.
    

2003-02-16	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Changed implementation of cursorToX: Y: and 
      cursorToX: in VT100Screen. Was interfering 
      with resize command.
      

2003-02-14	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed encoding bug in PTYsession: -keyDown:
    
    * Workaround for a possible Cocoa bug in copy/paste.
    
    * Changed keyboard shortcuts to navigate sessions 
      from Cmd-1/2 to Cmd [ and Cmd ].
      
      
2003-02-13	fabian
    * Enhanced text input
    * Incorporated Japanese patch from OHKAWA
    